fix: correct alignment properties in Player styles and update RouteDetailPage to include StreetViewer component

--- a/app/components/Player.module.scss
+++ b/app/components/Player.module.scss
@@ -2,7 +2,7 @@
 
 .player {
   display: flex;
-  align-items: right;
-  justify-content: right;
+  align-items: center;
+  justify-content: center;
   padding: variables.$grid-spacing;
 }
